# django-wysiwyg

./: .gitignore  README.md  manage.py  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_mymodel_css.py
blog/static/admin/css/: style.css
blog/templates/: form_view.html
static/: plugin_ckeditor.js
wysiwyg/: asgi.py  settings.py  urls.py  wsgi.py
